fix z-indexes on detail page

--- a/html/detail/styles.css
+++ b/html/detail/styles.css
@@ -1,3 +1,9 @@
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1050;
+}
+
 main {
     flex-grow: 1;
     flex-shrink: 1;
@@ -10,6 +16,10 @@ main {
     main {
         margin-left: 0;
     }
+}
+
+footer {
+    z-index: 1050;
 }
 
 .sidebar-category {
