--- a/html/index/styles.css
+++ b/html/index/styles.css
@@ -12,7 +12,7 @@ main {
     padding: 2rem;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 768px) {
     main {
         margin-left: 0;
     }
